--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
     <html>
         <head>
-            <title>Contacs</title>
+            <title>Gallery</title>
         </head>
         <body>
 			<img src="https://i.ibb.co/XF6xGJ1/MGMjqd-X6y0-E.jpg" alt="MGMjqd-X6y0-E" border="0" width="20%">
